# OpenEnv

./: Dockerfile  README.md  openenv.yaml  pyproject.toml
scripts/: baseline_openai.py
server/: Dockerfile  app.py  environment.py
src/supportdesk_env/: __init__.py  client.py  env_logic.py  models.py  tasks.py
src/supportdesk_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/supportdesk_env/server/: app.py
